CppImageSource - Added ability to set image size using setup functions PyImageSource -  Added ability to set image size from within python PyOBS - Added Log function so that python can write to OBS log PyXElement - Created to represent an Element as found in OBS configuration files - Implemented the majority of the Set and Get functions PythonPlugin - Python class instances are now created for GUI and ImageSource - The GUI class will reload its self each time allowing modifications to be created without restarting OBS utils - Created to allow for easy access to common python to c conversions

--- a/PythonPlugin/PythonPlugin.vcxproj
+++ b/PythonPlugin/PythonPlugin.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Noddy.h" />
+    <ClInclude Include="PyXElement.h" />
     <ClInclude Include="PyVect2.h" />
     <ClInclude Include="Localization.h" />
     <ClInclude Include="CppAudioSource.h" />
@@ -31,6 +32,7 @@
     <ClInclude Include="PyScene.h" />
     <ClInclude Include="PythonPlugin.h" />
     <ClInclude Include="CppImageSource.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppAudioSource.cpp" />
