CppImageSource - Added ChangeScene, - Added GlobalSourceLeaveSceen - Added GlobalSourceEnterScene - Added EndScene - Added BeginScene PyImageSource - Added function to compliment implemented functions in CppImageSource - Added Drawsprite function, allows drawing to be controled from python.
PyOBS
- Added many additinal OBS Api functions

PyScene is no longer a place holder
Added PySceneItem to compliment PyScene

--- a/PythonPlugin/PythonPlugin.vcxproj
+++ b/PythonPlugin/PythonPlugin.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Noddy.h" />
+    <ClInclude Include="PySceneItem.h" />
+    <ClInclude Include="PyVect4.h" />
     <ClInclude Include="PyXElement.h" />
     <ClInclude Include="PyVect2.h" />
     <ClInclude Include="Localization.h" />
